# s_pipe_kinematicscpp

./: CMakeLists.txt
include/: forward_kinematics.h  inverse_kinematics.h  s_pipe_robot.h
src/: forward_kinematics.cpp  inverse_kinematics.cpp  main.cpp
